--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/vision": "^3.28.0",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "next": "^14.1.3",
     "next-sanity": "^7.1.4",
     "next-themes": "^0.2.1",
