--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
+    "gsap": "^3.12.5",
     "next": "^14.1.3",
     "next-sanity": "^7.1.4",
     "next-themes": "^0.2.1",
