--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-force-graph-3d": "^1.24.2",
+    "react-intersection-observer": "^9.8.1",
     "sanity": "^3.32.0",
     "sanity-plugin-media": "^2.2.5",
     "styled-components": "^6.1.8",
