--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.12",
-    "next": "^14.1.3",
+    "next": "^14.1.4",
     "next-sanity": "^7.1.4",
     "next-themes": "^0.2.1",
     "plaiceholder": "^3.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-force-graph-3d": "^1.24.2",
     "react-intersection-observer": "^9.8.1",
     "sanity": "^3.32.0",
@@ -37,7 +37,7 @@
     "@types/react-dom": "^18",
     "@types/three": "^0.161.2",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.1.4",
     "postcss": "^8",
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
