--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
-    "framer-motion": "^11.0.12",
+    "gsap": "^3.12.5",
     "next": "^14.1.4",
     "next-sanity": "^7.1.4",
     "next-themes": "^0.2.1",
@@ -23,7 +23,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-force-graph-3d": "^1.24.2",
-    "react-intersection-observer": "^9.8.1",
     "sanity": "^3.32.0",
     "sanity-plugin-media": "^2.2.5",
     "styled-components": "^6.1.8",
