--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@portabletext/react": "^3.0.11",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.28.0",
+    "@studio-freight/hamo": "^0.6.28",
+    "@studio-freight/react-lenis": "^0.0.46",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
