--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.28.0",
     "@studio-freight/hamo": "^0.6.28",
-    "@studio-freight/react-lenis": "^0.0.46",
+    "@studio-freight/lenis": "^1.0.42",
+    "@studio-freight/react-lenis": "^0.0.38",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
@@ -33,8 +34,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.71",
     "@types/react-dom": "^18",
     "@types/three": "^0.161.2",
     "eslint": "^8",
@@ -42,6 +43,6 @@
     "postcss": "^8",
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.4.3"
   }
 }
